this is spring-cloud project

--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,7 @@
     <modules>
         <module>user-service</module>
         <module>order-service</module>
-        <module>eureka-server</module>
-        <module>feign-api</module>
-        <module>gateway</module>
+        <module>eureka-service</module>
     </modules>
 
     <packaging>pom</packaging>
@@ -34,6 +32,7 @@
     </properties>
 
     <dependencyManagement>
+
         <dependencies>
             <!-- springCloud -->
             <dependency>
@@ -43,11 +42,11 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-            <!--nacos的管理依赖-->
+            <!--Nacos管理依赖-->
             <dependency>
                 <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-alibaba-dependencies</artifactId>
-                <version>2.2.5.RELEASE</version>
+                <version>2.2.6.RELEASE</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -64,6 +63,7 @@
                 <version>${mybatis.version}</version>
             </dependency>
         </dependencies>
+
     </dependencyManagement>
     <dependencies>
         <dependency>
