--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -1,19 +1,20 @@
 server:
-  port: 8088
+  port: 8080
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/cloud_order?useSSL=false
+    url: jdbc:mysql://localhost:3306/cloud-order?useSSL=false
     username: root
-    password: 123
+    password: root
     driver-class-name: com.mysql.jdbc.Driver
   application:
     name: orderservice
   cloud:
     nacos:
-      server-addr: localhost:8848 # nacos服务地址
-#      discovery:
-#        namespace: 4d6ce343-9e1b-44df-a90f-2cf2b6b3d177 # dev环境
-#        ephemeral: false # 是否是临时实例
+      server-addr: localhost:8848
+      discovery:
+        cluster-name: HZ
+        namespace: ab92eabd-81c6-4af7-94f1-99dbecf4383b
+        ephemeral: false   #检查是否是临时实例
 mybatis:
   type-aliases-package: cn.itcast.user.pojo
   configuration:
@@ -23,20 +24,15 @@ logging:
     cn.itcast: debug
   pattern:
     dateformat: MM-dd HH:mm:ss:SSS
+
 #eureka:
 #  client:
-#    service-url:  # eureka的地址信息
+#    service-url:    #eureka的地址信息
 #      defaultZone: http://127.0.0.1:10086/eureka
 userservice:
   ribbon:
-    NFLoadBalancerRuleClassName: com.alibaba.cloud.nacos.ribbon.NacosRule  # 负载均衡规则
+    NFLoadBalancerRuleClassName: com.alibaba.cloud.nacos.ribbon.NacosRule
 ribbon:
   eager-load:
-    enabled: true # 开启饥饿加载
-    clients: # 指定饥饿加载的服务名称
-      - userservice
-feign:
-  httpclient:
-    enabled: true # 支持HttpClient的开关
-    max-connections: 200 # 最大连接数
-    max-connections-per-route: 50 # 单个路径的最大连接数
+    enabled: false
+    clients:
