--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -2,12 +2,17 @@ server:
   port: 8081
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/cloud_user?useSSL=false
+    url: jdbc:mysql://localhost:3306/cloud-user?useSSL=false
     username: root
-    password: 123
+    password: root
     driver-class-name: com.mysql.jdbc.Driver
-#      discovery:
-#        cluster-name: HZ
+  application:
+    name: userservice
+  cloud:
+    nacos:
+      server-addr: localhost:8848
+      discovery:
+        cluster-name: HZ
 mybatis:
   type-aliases-package: cn.itcast.user.pojo
   configuration:
@@ -17,9 +22,14 @@ logging:
     cn.itcast: debug
   pattern:
     dateformat: MM-dd HH:mm:ss:SSS
+
+
 #eureka:
 #  client:
-#    service-url:  # eureka的地址信息
+#    service-url:    #eureka的地址信息
 #      defaultZone: http://127.0.0.1:10086/eureka
-pattern:
-  name: 本地环境local
+#ribbon:
+#  eager-load:
+#    enabled: true       #开启饥饿加载
+#    clients: userservice            # 指定饥饿加载的服务名称
+
